<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">

    <include
        android:id="@+id/base_bar_layout"
        layout="@layout/base_bar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_user_msg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:paddingLeft="@dimen/layout_marginLR"
        android:paddingRight="@dimen/layout_marginLR"
        app:layout_constraintTop_toBottomOf="@id/base_bar_layout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginLR"
            android:layout_marginTop="10dp"
            android:text="姓名"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_l"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginLR"
            android:text="13999999999"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_s"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="所属区域：xxxxxx区"
            android:textColor="@color/test_color_feeble"
            android:textSize="@dimen/test_s"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp"
            android:text="直属领导：xxx"
            android:textColor="@color/test_color_feeble"
            android:textSize="@dimen/test_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="管理员"
            android:textColor="@color/test_color_feeble"
            android:textSize="@dimen/test_s"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
            app:layout_constraintRight_toLeftOf="@id/iv_back_r" />

        <ImageView
            android:id="@+id/iv_back_r"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_r"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_pj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:padding="@dimen/layout_marginLR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_user_msg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的项目"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="29"
            android:textColor="@color/test_color_grey"
            android:textSize="@dimen/test_l"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/back_pj"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_pj"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:src="@drawable/back_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>



<android.support.constraint.ConstraintLayout
       android:id="@+id/ll_mine_mytask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:padding="@dimen/layout_marginLR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_pj">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_my_task"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29"
        android:textColor="@color/test_color_grey"
        android:textSize="@dimen/test_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/back_pj2"
        app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/back_pj2"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:src="@drawable/back_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
<android.support.constraint.ConstraintLayout
       android:id="@+id/ll_mine_mywarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:padding="@dimen/layout_marginLR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_mine_mytask">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_my_warn"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29"
        android:textColor="@color/test_color_grey"
        android:textSize="@dimen/test_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/back_pj3"
        app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/back_pj3"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:src="@drawable/back_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
       android:id="@+id/ll_mine_myissue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:padding="@dimen/layout_marginLR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_mine_mytask">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_my_issue"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29"
        android:textColor="@color/test_color_grey"
        android:textSize="@dimen/test_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/back_pj4"
        app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/back_pj4"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:src="@drawable/back_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_user_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginT"
        android:background="@color/white"
        android:padding="@dimen/layout_marginLR"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_mine_mywarn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户管理"
            android:textColor="@color/test_color_base"
            android:textSize="@dimen/test_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/back_user"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:src="@drawable/back_r"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/exit_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_bg_btn"
        android:text="退出登陆"
        android:textColor="@color/text_color_blue"
        android:textSize="@dimen/test_m"
        app:layout_constraintTop_toBottomOf="@+id/cl_user_manage" />
</android.support.constraint.ConstraintLayout>